--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,10 @@
-@import url("header.css");
-@import url("footer.css");
+@import url("css/header.css");
+@import url("css/footer.css");
+
+@font-face {
+  font-family: bebasNeue;
+  src: url(/styles/fonts/BebasNeue-Regular.ttf);
+}
 
 body {
   margin: 0;
@@ -7,6 +12,6 @@ body {
   height: 100vh;
   box-sizing: border-box;
   display: grid;
-  grid-template-rows: 8vh 92vh auto;
+  grid-template-rows: auto 92vh auto;
   background: linear-gradient(black, #161414 25% 75%, black);
 }
