--- a/styles/css/home.css
+++ b/styles/css/home.css
@@ -2,50 +2,69 @@
   background-image: url("/public/home_background.gif");
   background-position: center;
   background-repeat: no-repeat;
-  background-size:100% 100%;
+  background-size: 100% 100%;
   height: 100%;
   border-bottom: 1px solid black;
   border-top: 1px solid black;
 }
 
-.top-shadow-gradient{
-  background: linear-gradient(black,rgb(7, 7, 7,0.8), black);
+.shadow-gradient {
+  background: linear-gradient(black, rgb(7, 7, 7, 0.8), black);
   height: 100%;
   width: 100%;
 }
 
-.m-container{
+.m-container {
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  color: white;
   height: 100%;
+  padding: 0 2rem;
 }
 
-.m2-container{
+.m2-container {
   max-width: 31.75rem;
+  display: flex;
+  flex-direction: column;
 }
 
-.text-one{
+.main-text {
+  text-align: center;
+}
+
+.main-text h1 {
   font-family: bebasNeue;
   letter-spacing: 2px;
   font-size: 2.5rem;
 }
 
-.algo{
-  font-family: Arial, Helvetica, sans-serif;
+.email-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.email-container .f-form{
+ flex-grow: 1;
+}
+.email-container a{
+  flex-grow: 0;
+}
+
+input {
+  font-size: 19px;
+  background: #fff;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  color: #64686b;
 }
 
 .f-form {
   border: none;
-  width: 40vw;
-  max-width: 400px;
   outline: none;
   padding-left: 1rem;
   margin: 0;
   border-radius: 5px 0 0 5px;
-  height: unset;
 }
 
 a#button {
@@ -56,18 +75,3 @@ a#button {
   transition: background 0.3s ease-in-out;
   border-radius: 0 5px 5px 0;
 }
-
-.f-email input {
-  font-size: 19px;
-  font-family: Helvetica, Arial, sans-serif;
-  background: #fff;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  color: #64686b;
-}
-.f-email {
-  display: flex;
-  justify-content: center;
-}
-
-
