--- a/styles/index.css
+++ b/styles/index.css
@@ -14,4 +14,6 @@ body {
   display: grid;
   grid-template-rows: auto 92vh auto;
   background: linear-gradient(black, #161414 25% 75%, black);
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
 }
