--- a/styles/css/home.css
+++ b/styles/css/home.css
@@ -1,5 +1,5 @@
 .bg_img {
-  background-image: url("/public/home_background.gif");
+  background-image: url(../../public/home_background.gif);
   background-position: center;
   background-repeat: no-repeat;
   background-size: 100% 100%;
