--- a/styles/css/footer.css
+++ b/styles/css/footer.css
@@ -1,5 +1,5 @@
 footer {
-  background-color: rgb(0, 0, 0);
+  background-color: black;
   font-family: Arial, Helvetica, sans-serif;
   color: white;
 }
@@ -10,7 +10,7 @@ footer {
 
 .f-policy-container {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   flex-wrap: wrap;
 }
 
@@ -33,4 +33,10 @@ footer {
   color: rgba(255, 255, 255, 0.222);
 }
 
+@media (max-width: 426px) {
+  .f-policy-container {
+    align-items: center;
+    flex-direction: column;
+  }
+}
 
