--- a/styles/css/header.css
+++ b/styles/css/header.css
@@ -1,18 +1,19 @@
 header {
-  background-color: rgb(0, 0, 0);
+  background-color: black;
   color: rgba(255, 255, 255, 0.67);
   font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-nav {
-  padding: 12px;
-}
 ul {
   list-style-type: none;
   align-items: baseline;
   padding: 0px;
   margin: 0;
 }
+
 ul a {
   color: inherit;
   text-decoration: none;
