--- a/styles/css/home.css
+++ b/styles/css/home.css
@@ -1,17 +1,12 @@
-.bg_img {
+body {
   background-image: url(../../public/home_background.gif);
   background-position: center;
   background-repeat: no-repeat;
   background-size: 100% 100%;
-  height: 100%;
-  border-bottom: 1px solid black;
-  border-top: 1px solid black;
 }
 
-.shadow-gradient {
-  background: linear-gradient(black, rgb(7, 7, 7, 0.8), black);
-  height: 100%;
-  width: 100%;
+main {
+  background: linear-gradient(black, rgb(7, 7, 7, 0.2), black);
 }
 
 .m-container {
@@ -20,7 +15,7 @@
   flex-direction: column;
   align-items: center;
   height: 100%;
-  padding: 0 2rem;
+  margin: 0 20px;
 }
 
 .m2-container {
@@ -35,7 +30,7 @@
 
 .main-text h1 {
   font-family: bebasNeue;
-  letter-spacing: 2px;
+  letter-spacing: 0.1rem;
   font-size: 2.5rem;
 }
 
@@ -44,15 +39,15 @@
   flex-direction: row;
   justify-content: center;
 }
-.email-container .f-form{
- flex-grow: 1;
+.email-container .f-form {
+  flex-grow: 1;
 }
-.email-container a{
+.email-container a {
   flex-grow: 0;
 }
 
 input {
-  font-size: 19px;
+  font-size: 1rem;
   background: #fff;
   -webkit-box-shadow: none;
   box-shadow: none;
