--- a/styles/index.css
+++ b/styles/index.css
@@ -9,11 +9,10 @@
 body {
   margin: 0;
   padding: 0;
-  height: 100vh;
+  height: 100%;
   box-sizing: border-box;
   display: grid;
-  grid-template-rows: auto 92vh auto;
-  background: linear-gradient(black, #161414 25% 75%, black);
+  grid-template-rows: 8vh 92vh auto;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
 }
