--- a/styles/index.css
+++ b/styles/index.css
@@ -9,7 +9,7 @@
 body {
   margin: 0;
   padding: 0;
-  height: 100%;
+  height: 100vh;
   box-sizing: border-box;
   display: grid;
   grid-template-rows: 8vh 92vh auto;
