--- a/styles/css/home.css
+++ b/styles/css/home.css
@@ -3,6 +3,8 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: 100% 100%;
+  display: grid;
+  grid-template-rows: 8vh 92vh auto;
 }
 
 main {
