--- a/styles/css/header.css
+++ b/styles/css/header.css
@@ -7,6 +7,14 @@ header {
   align-items: center;
 }
 
+.fixed-header {
+  width: 100%;
+  height: 8vh;
+  position: fixed;
+  z-index: 100;
+  top: 0;
+}
+
 ul {
   list-style-type: none;
   align-items: baseline;
