fearture: background image at the top of the planet  page

--- a/styles/css/planets.css
+++ b/styles/css/planets.css
@@ -7,6 +7,10 @@ header {
   opacity: 0.8;
 }
 
+.back-img {
+  background-image: url(../../public/planets-background.jpeg);
+}
+
 .pla_margin-container {
   margin: 0 auto;
   width: min-content;
@@ -93,5 +97,8 @@ p {
 @media (max-width: 769px) {
   .pla_flex-container {
     grid-template-columns: min-content;
+  }
+  .back-img-main-text {
+    font-size: 3rem;
   }
 }
