--- a/styles/css/home.css
+++ b/styles/css/home.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(../../public/home_background.gif);
+  background-image: url(../../public/home_background.jpeg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: 100% 100%;
