--- a/styles/css/footer.css
+++ b/styles/css/footer.css
@@ -2,6 +2,7 @@ footer {
   background-color: black;
   font-family: Arial, Helvetica, sans-serif;
   color: white;
+  width: 100%;
 }
 
 .f-rows {
@@ -37,5 +38,8 @@ footer {
   .f-policy-container {
     align-items: center;
     flex-direction: column;
+  }
+  .bottom-links {
+    margin-right: 0;
   }
 }
