--- a/styles/css/footer.css
+++ b/styles/css/footer.css
@@ -36,7 +36,7 @@ footer {
 
 @media (max-width: 426px) {
   .f-policy-container {
-    align-items: center;
+    align-items: flex-start;
     flex-direction: column;
   }
   .bottom-links {
