--- a/styles/css/footer.css
+++ b/styles/css/footer.css
@@ -10,13 +10,13 @@ footer {
 }
 
 .f-policy-container {
+  width: 100%;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
 }
 
 .bottom-links {
-  align-items: center;
   text-decoration: none;
   font-size: 0.7rem;
   margin-right: 1rem;
@@ -34,7 +34,7 @@ footer {
   color: rgba(255, 255, 255, 0.222);
 }
 
-@media (max-width: 767px) {
+@media (max-width: 768px) {
   .f-policy-container {
     align-items: flex-start;
     flex-direction: column;
